--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,6 +10,7 @@
   /* background-color: #FCBF49; */
   height: 95vh;
   color: white;
+  font-family: 'Playfair Display', serif;
   /* background-image: url("http://aaronjp.com/img/fast.gif"); */
   /* background-image: url(../images/plane_compress.gif); */
   background-size:100% 100%;
@@ -49,7 +50,7 @@
   border-top-left-radius: 20% */
   /* clip-path: polygon(0 0, 100% 0%, 100% 74%, 0% 100%); */
   /* clip-path: polygon(0 25%, 100% 0%, 100% 75%, 0% 100%); */
-  height: 95vh;
+  min-height: 110vh;
   clip-path: polygon(20% 0%, 100% 0, 100% 20%, 100% 80%, 100% 100%, 100% 93%, 0 100%, 0 0);
   background-color: #F7F7F2;
 
@@ -63,6 +64,7 @@
   display: flex;
   text-align: center;
   justify-content: center;
+  font-family: 'Playfair Display', serif;
   /* justify-content: center;
   text-align: center; */ 
   color: rgb(142, 57, 153, 0.6);
@@ -70,10 +72,11 @@
 
 .skills-container{
   display: flex;
-  border: 2px purple solid;
-  height: 95vh;
+  /* border: 2px purple solid; */
+  min-height: 110vh;
   justify-content: space-around;
   align-items: center;
+
 
   color: white;
 }
@@ -85,8 +88,10 @@
   /* border: 3px gray solid; */
   height: 50vh;
   background-color:rgb(142, 57, 153, 0.6);
+  /* margin: 10px; */
   /* box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 2px gray; */
   /* box-shadow: 5px 5px 15px 5px #000000; */
+  margin-bottom: 7rem;
 
 
 
@@ -119,16 +124,17 @@
   justify-content: center; */
   /* align-items: center; */
   width: 35vh;
-  border: 2px palegreen solid;
+  /* border: 2px palegreen solid; */
   text-align: center;
+  
 }
 
 .front-end{
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
 }
 
 .server{
-  border: 2px solid yellowgreen;
+  /* border: 2px solid yellowgreen; */
 }
 
 
@@ -172,7 +178,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 2px lightgreen solid;
+  /* border: 2px lightgreen solid; */
   height: 100%;
   width: 100%;
 }
@@ -182,16 +188,33 @@
   flex-direction: row;
   width: 100%;
   justify-content: center;
-  padding-top: 10vh;
+  padding-top: 15vh;
+  font-family: 'Playfair Display', serif;
 }
 
-.fourthDiv .row{
+.project-cont{
+  display: flex;
+  /* border: 2px purple solid; */
+  min-height: inherit;
+
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  box-sizing: border-box;
+  width: 100%
+}
+
+.project-cont .row{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  border: 2px lightgreen solid;
-  height: 100%;
-  width: 100%;
+  /* border: 2px lightgreen solid; */
+  min-height: inherit;
+  /* margin-top: 10rem; */
+  margin-bottom: 10rem;
+
+  /* height: 100%;
+  width: 100%; */
 }
 
 .project-container{
@@ -199,58 +222,55 @@
   justify-content: space-around;
   padding: 15px;
   border: 2px solid green;
+  width: 100%;
 }
 
 .habit-card{
-  /* border: 2px solid red; */
-  width: 25vw;
-  height: 35vh;
+  min-width: 25vw;
+  min-height: 35vh;
+
   background-color: white;
   background-image: linear-gradient(to right bottom, rgba(172, 163, 30, 0.7), rgba(255, 87, 9, 0.6)), url(https://images.unsplash.com/photo-1580227974546-fbd48825d991?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&q=60);
   background-size: cover;
   background-position: 35% 55%;
-  /* box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8; */
   box-shadow: 0px 10px 13px -7px #000000;
   color: purple;
   font-size: 20px;
   text-align: center;
   border-radius: 12px;
+  /* border: 2px orchid solid; */
 }
 
 .park-card{
-  /* border: 2px solid red; */
-  width: 25vw;
-  height: 35vh;
+  min-width: 25vw;
+  min-height: 35vh;
   background-color: green;
-  /* radial-gradient(circle, red, yellow, green); */
-  /* background-image: url("https://images.unsplash.com/photo-1482192596544-9eb780fc7f66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80"); */
-  /* background-image: radial-gradient(circle, rgba(255, 255, 255, 0.7), rgba(17, 145, 0, 0.863)), url(https://images.unsplash.com/photo-1482192596544-9eb780fc7f66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80); */
   background-image: linear-gradient(to right bottom, rgba(30, 172, 65, 0.7), rgba(10, 116, 0, 0.6)), url(https://images.unsplash.com/photo-1482192596544-9eb780fc7f66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);
-
-  /* box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8; */
   box-shadow: 0px 10px 13px -7px #000000;
-
   opacity: 10;
   color: purple;
   font-size: 20px;
   text-align: center;
   object-fit: contain;
   border-radius: 12px;
-}
 
-.hangman-card{
   /* border: 2px solid red; */
-  width: 25vw;
-  height: 35vh;
-  background-color: green;
+  /* box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8; */
   /* radial-gradient(circle, red, yellow, green); */
   /* background-image: url("https://images.unsplash.com/photo-1482192596544-9eb780fc7f66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80"); */
   /* background-image: radial-gradient(circle, rgba(255, 255, 255, 0.7), rgba(17, 145, 0, 0.863)), url(https://images.unsplash.com/photo-1482192596544-9eb780fc7f66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80); */
+}
+
+.hangman-card{
+  min-width: 25vw;
+  min-height: 35vh;
+  background-color: green;
+
   background-image: linear-gradient(to right bottom, rgba(73, 16, 70, 0.7), rgba(73, 2, 73, 0.6)), url(../images/hangman.png);
   background-position: 35% 55%;
   background-size: cover;
   backdrop-filter: blur(5px);
-  /* box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8; */
+
   box-shadow: 0px 10px 13px -7px #000000;
   opacity: 10;
   color: purple;
@@ -258,16 +278,24 @@
   text-align: center;
   object-fit: contain;
   border-radius: 12px;
+
+    /* border: 2px solid red; */
+  /* box-shadow: 0 5px 5px 0 rgba(233, 240, 243, 0.5), 0 0 0 1px #E6ECF8; */
+  /* radial-gradient(circle, red, yellow, green); */
+  /* background-image: url("https://images.unsplash.com/photo-1482192596544-9eb780fc7f66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80"); */
+  /* background-image: radial-gradient(circle, rgba(255, 255, 255, 0.7), rgba(17, 145, 0, 0.863)), url(https://images.unsplash.com/photo-1482192596544-9eb780fc7f66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80); */
   
 }
 
 
 .habit-title{
-    display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  width: 100%;
   color: white;
+  /* border: 2px red solid; */
+  min-height:inherit;
 }
 
 .parkadvisor-title{
@@ -299,7 +327,8 @@
   align-items: center; */
   /* border: 2px solid red; */
   /* background-color: #FCBF49; */
-  height: 105vh;
+
+  min-height: 110vh;
 
   color: black;
   /* background-image: url("http://aaronjp.com/img/fast.gif");
@@ -319,13 +348,14 @@
   /* border-top-left-radius: 5%; */
   /* clip-path: polygon(0 0, 100% 0%, 100% 74%, 0% 100%); */
   clip-path: polygon(0 8%, 100% 0, 100% 20%, 100% 80%, 100% 100%, 100% 93%, 0 100%, 0 0);
+  /* border: 5px pink solid; */
 
 }
 
 .game-card{
   /* border: 2px solid red; */
-  width: 25vw;
-  height: 35vh;
+  min-width: 25vw;
+  min-height: 35vh;
   background-color: white;
   background-image: linear-gradient(to right bottom, rgba(160, 9, 9, 0.7), rgba(255, 8, 0, 0.6)), url(https://images.unsplash.com/photo-1535043205849-513fe27db33e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1100&q=80);
   background-size: cover;
@@ -340,8 +370,8 @@
 
 .roommate-card{
   /* border: 2px solid red; */
-  width: 25vw;
-  height: 35vh;
+  min-width: 25vw;
+  min-height: 35vh;
   background-color: white;
   background-image: linear-gradient(to right bottom, rgba(0, 121, 158, 0.7), rgba(1, 87, 128, 0.6)), url(https://user-images.githubusercontent.com/1754248/35767821-d33cce64-08a7-11e8-8bdf-62fcafef570f.png);
   background-size: cover;
@@ -356,8 +386,8 @@
 
 .book-card{
   /* border: 2px solid red; */
-  width: 25vw;
-  height: 35vh;
+  min-width: 25vw;
+  min-height: 35vh;
   background-color: white;
   background-image: linear-gradient(to right bottom, rgba(158, 0, 92, 0.7), rgba(211, 22, 170, 0.6)), url(https://github.com/ajay-k/BookSearch/blob/master/Screenshots/SearchResults.png?raw=true);
   background-size: cover;
@@ -368,4 +398,41 @@
   font-size: 20px;
   text-align: center;
   border-radius: 12px;
+}
+
+.box{
+  /* border: 2px solid orange; */
+  margin: 10px;
+}
+
+.card-description {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* background: inherit; */
+  color: #fff;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* transition effect. not necessary */
+  transition: opacity .2s, visibility .2s;
+}
+
+.box:hover .card-description {
+  visibility: visible;
+  opacity: 1;
+  background-color: #141c3a;
+  border-radius: inherit;
+  /* background-image: inherit;
+  border-radius: inherit;
+  background-position: inherit;
+  background-size: inherit;
+  backdrop-filter: inherit; */
 }
