--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,6 @@
 .container-fluid{
   background-color: #F7F7F2;
+  
 }
 
 .firstDiv{
@@ -435,4 +436,75 @@
   background-position: inherit;
   background-size: inherit;
   backdrop-filter: inherit; */
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  transition: all 4s ease-in-out;
+  color: #fff;
+}
+
+.form-control{
+  width: 600px;
+  background: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid gray;
+  color: #fff;
+  font-size: 18px;
+  margin-bottom: 16px;
+
+} 
+
+input{
+  height: 45px;
+}
+
+.contact-form textarea {
+  height: 150px;
+}
+
+.contact-form ::placeholder { /* Firefox, Chrome, Opera */ 
+  color: white; 
+}
+
+
+.contact-form input:focus::placeholder { /* Firefox, Chrome, Opera */ 
+  color: black; 
+} 
+
+.contact-form textarea:focus::placeholder { /* Firefox, Chrome, Opera */ 
+  color: black; 
+} 
+
+
+input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: red;
+  opacity: 1; /* Firefox */
+}
+
+form .submit{
+  background: #ff5722;
+  border-color: transparent;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  height: 50px;
+  margin-top: 20px;
+}
+
+form .submit:hover{
+  background-color: #f44336;
+  cursor: pointer;
+}
+
+
+.resume-container{
+  height: 100vh;        /* Viewport-relative units */
+  width: 100vw;
 }
