--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -100,7 +100,15 @@
 .about-me-description{
   font-size: 36px;
   font-weight: bolder;
+  font-family: 'Playfair Display', serif;
+
 }
+
+.about-me-info{
+  display: flex;
+  margin-top: 5rem;
+}
+
 
 .tech{
   width: 35vh;
@@ -646,3 +654,4 @@ footer{
   color: white;
   /* border: 2px solid plum; */
 }
+
