--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,6 +9,10 @@
 
 .nav-link {
   color: white !important;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 1rem;
+  text-transform: lowercase;
+  letter-spacing: 1px;
 }
 
 .AboutMe{
@@ -38,13 +42,14 @@
 }
 
 .Skills{
-  background-color: #F2E9E4;
+  background-color: #6F1D1B;
   /* 6F1D1B */
+  /* F2E9E4 */
   height: 909px;
 }
 
 .Projects{
-  background-color: white;
+  background-color: #F2E9E4;
   height: 909px;
 }
 
@@ -53,16 +58,34 @@
 }
 
 .boxOne{
-  border: 2px solid white;
-  margin: 20px;
-  padding: 10px;
+  border-right: 2px solid white;
+  /* margin: 20px;
+  padding: 10px; */
   color: rgb(134, 134, 134);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  border-top: None;
 }
+
+.boxOne h3{
+  color: white;
+}
+
+.boxTwo{
+  /* margin: 20px;
+  padding: 10px; */
+  color: rgb(134, 134, 134);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.boxTwo h3{
+  color: white;
+}
+
 
 .skillsCard{
   width: 10rem;
