--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -53,6 +53,22 @@
   height: 909px;
 }
 
+/* .Projects h3{
+  display: flex;
+  justify-content: center;
+} */
+
+.Projects{
+  display: flex;
+  /* justify-content: center;
+  align-items: center; */
+  /* padding: 5rem; */
+}
+
+#hang{
+  fill: green;
+}
+
 #self-img{
   width: 50%;
 }
@@ -120,4 +136,85 @@ span{
   /* justify-content: center; */
   align-items: center;
   flex-direction: column;
+}
+
+.box{
+  background-color: white;
+  margin: 20px;
+  border: 3px white  double;
+  color: white;
+  border-radius: 5%;
+  height: 35%;
+}
+
+.Projects h1{
+  display: flex;;
+  justify-content: center;
+  width: 100%;
+  margin-top: 5rem;
+}
+
+.project-boxes{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 70%;
+}
+
+.fa-github{
+  font-size: 1.75rem;
+}
+
+.fa-external-link-alt{
+  font-size: 1.5rem;
+}
+
+.box .fa-external-link-alt{
+  position:absolute;
+  top:0;
+  right:0;
+  padding-top: .5rem;
+  padding-right: 1rem;
+  color: white;
+  text-shadow: 1px 1px blue;
+
+}
+
+.box .fa-github{
+  position:absolute;
+  bottom:0;
+  right:0;
+  padding-bottom: .5rem;
+  padding-right: 1rem;
+  color: white;
+  text-shadow: 1px 1px blue;
+}
+
+.habit-card{
+  background-color: #5e878c;;
+}
+
+.park-card{
+  background-color: #01a3a4;
+}
+
+.hangman-card{
+  background-color: #374151;
+}
+
+.game-card{
+  background-color: #f73635;
+}
+
+.book-card{
+  background-color: #5177bc
+}
+
+.roommate-card{
+  background-color: grey;
+}
+
+
+.card-title{
+  text-align: center;
 }
