--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -15,9 +15,12 @@
   letter-spacing: 1px;
 }
 
+
 .AboutMe{
-  background-color: #2E86AB;
-  height: 909px;
+  background-color: #fff;
+  /* height: 909px; */
+  height: 60vw;
+  width: 100vw;  
   /* padding: 0 !important; */
   /* border-bottom: white 15px solid; */
 }
@@ -30,7 +33,8 @@
   /* border: 2px solid purple; */
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: flex-end;
+
 }
 
 .aboutText{
@@ -41,16 +45,28 @@
   font-size: larger;
 }
 
+
 .Skills{
-  background-color: #6F1D1B;
+  background-color: #F6F6F6;
   /* 6F1D1B */
   /* F2E9E4 */
-  height: 909px;
+  /* height: 909px; */
+  height: 60vw;
+  width: 100vw;
+}
+
+.Skills h3{
+  padding-left: 3rem;
+  font-family: 'Roboto Slab', serif;
+  color: black !important;
 }
 
 .Projects{
-  background-color: #F2E9E4;
-  height: 909px;
+  background-color: #fff;
+  /* 1982FC */
+  /* #F2E9E4 */
+  height: 60vw;
+  width: 100vw;
 }
 
 /* .Projects h3{
@@ -58,19 +74,14 @@
   justify-content: center;
 } */
 
-.Projects{
-  display: flex;
-  /* justify-content: center;
-  align-items: center; */
-  /* padding: 5rem; */
-}
 
 #hang{
   fill: green;
 }
 
 #self-img{
-  width: 50%;
+  width: 65%;
+  /* background-color: lightgray !important; */
 }
 
 .boxOne{
@@ -158,7 +169,7 @@ span{
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 70%;
+  height: 100%;
 }
 
 .fa-github{
@@ -217,4 +228,141 @@ span{
 
 .card-title{
   text-align: center;
+}
+
+.speech-bubble {
+	position: relative;
+	background: #1982FC;
+	border-radius: .4em;
+  color: white;
+  padding: 30px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 50%;
+	width: 0;
+	height: 0;
+	border: 1.625em solid transparent;
+	border-right-color: #1982FC;
+	border-left: 0;
+	border-bottom: 0;
+	margin-top: -0.812em;
+	margin-left: -1.625em;
+}
+
+.ContactMeForm{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5rem;
+  background-color: #F6F6F6;
+}
+
+.ContactMeForm h1{
+  font-family: 'Roboto Slab', serif;
+}
+
+.contact-form{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35vw;
+  width: 100vw;  
+}
+
+input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: red;
+  opacity: 1; /* Firefox */
+}
+
+.contact-form textarea {
+  min-height: 10rem;
+  min-width: 30rem;
+  margin-bottom: 10px;
+}
+
+.contact-form input{
+  min-width: 30rem;
+  margin-bottom: 10px;
+}
+
+.contact-form ::placeholder { /* Firefox, Chrome, Opera */ 
+  color: black; 
+}
+
+
+.contact-form input:focus::placeholder { /* Firefox, Chrome, Opera */ 
+  color: black; 
+} 
+
+.contact-form textarea:focus::placeholder { /* Firefox, Chrome, Opera */ 
+  color: black; 
+} 
+
+
+form .submit{
+  background: #ff5722;
+  border-color: transparent;
+  color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  min-height: 50px;
+  margin-top: 20px;
+}
+
+form .submit:hover{
+  background-color: #f44336;
+  cursor: pointer;
+}
+
+footer{
+  display: flex;
+  justify-content: center;
+}
+
+
+@media (max-width: 768px) {
+  .AboutMe{
+    height: 100%;
+    width: 100vw;  
+
+  }
+
+  .Skills{
+    height: 100%;
+    width: 100vw;
+  }
+
+  .Projects{
+    height: 100%;
+    width: 100vw;
+  }
+
+  .contact-form{
+    height: 100%;
+    width: 100vw;
+  }
+
+  .contact-form textarea {
+    min-height: 5rem;
+    min-width: 5vw;
+    margin-bottom: 10px;
+  }
+
+  .contact-form input {
+    min-width: 20rem;
+    margin-bottom: 10px;
+  }
+
+  .avatar{
+    /* border: 2px solid purple; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
