--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,6 +7,12 @@
   color:  #D8A016  !important;
 }
 
+
+.navbar .navbar-toggler{
+  color: white;
+  border-color: white; 
+}
+
 .nav-link {
   color: white !important;
   font-family: 'IBM Plex Sans', sans-serif;
@@ -65,7 +71,7 @@
   background-color: #fff;
   /* 1982FC */
   /* #F2E9E4 */
-  height: 60vw;
+  height: 90vw;
   width: 100vw;
 }
 
@@ -169,7 +175,7 @@ span{
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  height: 80%;
 }
 
 .fa-github{
@@ -364,5 +370,26 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .speech-bubble {
+    position: relative;
+    background: #1982fc;
+    border-radius: .4em;
+  }
+
+  .speech-bubble:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-bottom-color: #1982fc;
+    border-top: 0;
+    border-left: 0;
+    margin-left: -10px;
+    margin-top: -20px;
   }
 }
