--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .navbar-light{
   background-color:#22223B;;
   
@@ -26,7 +30,9 @@
   background-color: #fff;
   /* height: 909px; */
   height: 60vw;
-  width: 100vw;  
+  width: 100%;
+  padding-top: 10rem;
+  padding-bottom: 5rem;
   /* padding: 0 !important; */
   /* border-bottom: white 15px solid; */
 }
@@ -51,6 +57,18 @@
   font-size: larger;
 }
 
+.scroll-down{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+.fa-chevron-down{
+  font-size: 60px;
+  color: #1982FC;
+}
 
 .Skills{
   background-color: #F6F6F6;
@@ -58,7 +76,8 @@
   /* F2E9E4 */
   /* height: 909px; */
   height: 60vw;
-  width: 100vw;
+  width: 100%;
+  border: 2px purple solid;
 }
 
 .Skills h3{
@@ -67,12 +86,22 @@
   color: black !important;
 }
 
+.container-fluid{
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  border: 5px lime solid;
+
+}
+
+
 .Projects{
   background-color: #fff;
   /* 1982FC */
   /* #F2E9E4 */
   height: 90vw;
-  width: 100vw;
+  width: 100%;
+  border: 3px pink solid;
 }
 
 /* .Projects h3{
@@ -117,6 +146,11 @@
 
 .boxTwo h3{
   color: white;
+}
+
+.row{
+  width: 100%;
+  margin: 0;
 }
 
 
@@ -177,6 +211,24 @@ span{
   width: 100%;
   height: 80%;
 }
+
+.FadeIn {
+  -webkit-animation: slideIn 0.8s ease 0.3s forwards;
+  animation: slideIn 3s ease 0.3s forwards;
+}
+
+@keyframes slideIn {
+  0% {
+      -webkit-transform: translateY(40px);
+      opacity: 0;
+  }
+  100% {
+      -webkit-transform: translateY(0px);
+      opacity: 1;
+  }
+}
+
+
 
 .fa-github{
   font-size: 1.75rem;
@@ -264,8 +316,9 @@ span{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 5rem;
   background-color: #F6F6F6;
+  border: 2px red solid;
+  width: 100%;
 }
 
 .ContactMeForm h1{
@@ -329,6 +382,25 @@ form .submit:hover{
 footer{
   display: flex;
   justify-content: center;
+}
+
+
+.top-row{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-row a{
+  padding: 0 1rem;
+}
+
+.bottom-row{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 
