--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,6 +9,8 @@ html {
 
 .navbar-brand{
   color:  #D8A016  !important;
+  width: 100px;
+  height: 45px;
 }
 
 
@@ -65,9 +67,14 @@ html {
   justify-content: flex-end;
 }
 
-.fa-chevron-down{
+.fa-arrow-alt-circle-down{
   font-size: 60px;
   color: #1982FC;
+}
+
+.arrow{
+  display: flex;
+  justify-content: center;
 }
 
 .Skills{
@@ -77,7 +84,7 @@ html {
   /* height: 909px; */
   height: 60vw;
   width: 100%;
-  border: 2px purple solid;
+  /* border: 2px purple solid; */
 }
 
 .Skills h3{
@@ -90,7 +97,7 @@ html {
   width: 100vw;
   justify-content: center;
   align-items: center;
-  border: 5px lime solid;
+  /* border: 5px lime solid; */
 
 }
 
@@ -101,7 +108,7 @@ html {
   /* #F2E9E4 */
   height: 90vw;
   width: 100%;
-  border: 3px pink solid;
+  /* border: 3px pink solid; */
 }
 
 /* .Projects h3{
@@ -315,21 +322,27 @@ span{
 .ContactMeForm{
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
   background-color: #F6F6F6;
-  border: 2px red solid;
+  /* border: 2px red solid; */
   width: 100%;
+  height: 100vh;
 }
 
 .ContactMeForm h1{
   font-family: 'Roboto Slab', serif;
+  text-align: center;
+  width: 100%;
+  padding-bottom: 5rem;
 }
 
 .contact-form{
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 35vw;
+  height: 55vw;
   width: 100vw;  
 }
 
@@ -403,6 +416,47 @@ footer{
   align-items: center;
 }
 
+.bottom-row p{
+  padding: 0 .5rem;
+}
+
+.arrow {
+  text-align: center;
+  margin: 8% 0;
+}
+
+.resume-container{
+  height: 100vh;        /* Viewport-relative units */
+  width: 100vw;
+}
+
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+
+
+.card-description{
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
 
 @media (max-width: 768px) {
   .AboutMe{
