--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -108,7 +108,7 @@ html {
 
 .Skills h3{
   padding-left: 3rem;
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Nunito Sans','Roboto Slab', serif;
   color: black !important;
 }
 
