Updates projects and resume

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -301,8 +301,8 @@ span{
   background-color: #f73635;
 }
 
-.book-card{
-  background-color: #5177bc
+.yellomango-card{
+  background-color: #f6bb15
 }
 
 .roommate-card{
